fixed layout on smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,6 +532,11 @@ section {
   .hero .hero-img img {
     width: 80%;
   }
+
+  .hero .container .row .flex-column {
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 768px) {
